minor spacing fixes

--- a/resources/css/style2.css
+++ b/resources/css/style2.css
@@ -16,7 +16,7 @@ h1 {
 }
 .container {
   display: flex;
-  padding: 1.5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
 
 }
 
@@ -61,7 +61,7 @@ h1 {
 
 /* Header */
 header {
-  margin: 0 2rem;
+  margin: 0 1.5rem;
 }
 header img{
   padding-right: .2rem;
